Fix spacing

--- a/app/styles/resume.less
+++ b/app/styles/resume.less
@@ -20,7 +20,7 @@
   width: @3cols;
   height: @3cols;
   border-radius: 50%;
-  margin: 0 auto;
+  margin: 0 auto 35px auto;
 }
 
 .Resume-aboutDetails {
